Updating html structure via get_poketype_refactored.rb file

--- a/poke_page.html
+++ b/poke_page.html
@@ -1,102 +1,85 @@
 <div class='bar_default'>
-	<div class='bar_filled_highlight' style='height: 6.00924499229584%;'>
 	<div class='bar_title'>FIRE</div>
-	</div>
+	<div class='bar_filled_highlight' style='height: 6.00924499229584%;'></div>
 </div>
 
 <div class='bar_default'>
-	<div class='bar_filled_highlight' style='height: 9.399075500770417%;'>
 	<div class='bar_title'>GRASS</div>
-	</div>
+	<div class='bar_filled_highlight' style='height: 9.399075500770417%;'></div>
 </div>
 
 <div class='bar_default'>
-	<div class='bar_filled_highlight' style='height: 5.084745762711865%;'>
 	<div class='bar_title'>ROCK</div>
-	</div>
+	<div class='bar_filled_highlight' style='height: 5.084745762711865%;'></div>
 </div>
 
 <div class='bar_default'>
-	<div class='bar_filled_highlight' style='height: 15.408320493066254%;'>
 	<div class='bar_title'>WATER</div>
-	</div>
+	<div class='bar_filled_highlight' style='height: 15.408320493066254%;'></div>
 </div>
 
 <div class='bar_default'>
-	<div class='bar_filled_highlight' style='height: 9.244992295839753%;'>
 	<div class='bar_title'>BUG</div>
-	</div>
+	<div class='bar_filled_highlight' style='height: 9.244992295839753%;'></div>
 </div>
 
 <div class='bar_default'>
-	<div class='bar_filled_highlight' style='height: 14.946070878274268%;'>
 	<div class='bar_title'>NORMAL</div>
-	</div>
+	<div class='bar_filled_highlight' style='height: 14.946070878274268%;'></div>
 </div>
 
 <div class='bar_default'>
-	<div class='bar_filled_highlight' style='height: 4.006163328197227%;'>
 	<div class='bar_title'>POISON</div>
-	</div>
+	<div class='bar_filled_highlight' style='height: 4.006163328197227%;'></div>
 </div>
 
 <div class='bar_default'>
-	<div class='bar_filled_highlight' style='height: 5.238828967642527%;'>
 	<div class='bar_title'>ELECTRIC</div>
-	</div>
+	<div class='bar_filled_highlight' style='height: 5.238828967642527%;'></div>
 </div>
 
 <div class='bar_default'>
-	<div class='bar_filled_highlight' style='height: 4.468412942989214%;'>
 	<div class='bar_title'>GROUND</div>
-	</div>
+	<div class='bar_filled_highlight' style='height: 4.468412942989214%;'></div>
 </div>
 
 <div class='bar_default'>
-	<div class='bar_filled_highlight' style='height: 3.389830508474576%;'>
 	<div class='bar_title'>FIGHTING</div>
-	</div>
+	<div class='bar_filled_highlight' style='height: 3.389830508474576%;'></div>
 </div>
 
 <div class='bar_default'>
-	<div class='bar_filled_highlight' style='height: 6.779661016949152%;'>
 	<div class='bar_title'>PSYCHIC</div>
-	</div>
+	<div class='bar_filled_highlight' style='height: 6.779661016949152%;'></div>
 </div>
 
 <div class='bar_default'>
-	<div class='bar_filled_highlight' style='height: 2.9275808936825887%;'>
 	<div class='bar_title'>GHOST</div>
-	</div>
+	<div class='bar_filled_highlight' style='height: 2.9275808936825887%;'></div>
 </div>
 
 <div class='bar_default'>
-	<div class='bar_filled_highlight' style='height: 3.2357473035439135%;'>
 	<div class='bar_title'>ICE</div>
-	</div>
+	<div class='bar_filled_highlight' style='height: 3.2357473035439135%;'></div>
 </div>
 
 <div class='bar_default'>
-	<div class='bar_filled_highlight' style='height: 3.0816640986132513%;'>
 	<div class='bar_title'>DRAGON</div>
-	</div>
+	<div class='bar_filled_highlight' style='height: 3.0816640986132513%;'></div>
 </div>
 
 <div class='bar_default'>
-	<div class='bar_filled_highlight' style='height: 2.773497688751926%;'>
 	<div class='bar_title'>STEEL</div>
-	</div>
+	<div class='bar_filled_highlight' style='height: 2.773497688751926%;'></div>
 </div>
 
 <div class='bar_default'>
-	<div class='bar_filled_highlight' style='height: 3.8520801232665636%;'>
 	<div class='bar_title'>DARK</div>
-	</div>
+	<div class='bar_filled_highlight' style='height: 3.8520801232665636%;'></div>
 </div>
 
 <div class='bar_default'>
-	<div class='bar_filled_highlight' style='height: 0.15408320493066258%;'>
 	<div class='bar_title'>FLYING</div>
-	</div>
+	<div class='bar_filled_highlight' style='height: 0.15408320493066258%;'></div>
 </div>
 
