Tweaking CSS styling, Changed to vertical bar format

--- a/poke_page.html
+++ b/poke_page.html
@@ -11,6 +11,7 @@
 		<div class="container">
 			<div class='bar_default'>
 				<div class='bar_title'>FIRE</div>
+				<div class='bar_number'>6.0%</div>
 				<div class='bar_filled_highlight' style='height: 6.00924499229584%;'></div>
 			</div>
 
