Revised typo in HTML, changed colour of graph in CSS

--- a/poke_page.html
+++ b/poke_page.html
@@ -23,7 +23,7 @@
 
 			<div class='bar_default'>
 				<div class='bar_title'>ROCK</div>
-				<div class='bar_number'>5.0</div>
+				<div class='bar_number'>5.0%</div>
 				<div class='bar_filled_highlight' style='height: 5.084745762711865%;'></div>
 			</div>
 
